refactor code, add best model in train.py

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -16,7 +16,8 @@
     "from sklearn.decomposition import PCA\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import os"
    ]
   },
   {
@@ -34,7 +35,17 @@
     "    s = s.replace(']', '')\n",
     "    s = s.strip()\n",
     "    l = map(float, s.split(' '))\n",
-    "    return l"
+    "    return l\n",
+    "\n",
+    "def save_dataframe(path, df):\n",
+    "    path_l = path.split('/')\n",
+    "    file_name = path_l[-1]\n",
+    "    del path_l[-1]\n",
+    "    \n",
+    "    if not os.path.exists('/'.join(path_l)):\n",
+    "        os.makedirs('/'.join(path_l))\n",
+    "    df.to_pickle(path)\n",
+    "    print 'file saved - {}'.format(path)"
    ]
   },
   {
@@ -51,6 +62,20 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "TRAIN_PATH = 'train_db/'\n",
+    "TEST_PATH = 'test_db/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
@@ -60,42 +85,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 52284/52284 [03:35<00:00, 243.18it/s] \n"
+      "100%|██████████| 52284/52284 [00:05<00:00, 9875.19it/s] \n"
      ]
     }
    ],
    "source": [
-    "train_files = sorted(listdir('train_db/'))\n",
+    "# convert all txt files to pandas DataFrame\n",
+    "\n",
+    "train_files = sorted(listdir(TRAIN_PATH))\n",
     "\n",
     "vecs = []\n",
     "person_ids = []\n",
     "\n",
     "for txt in tqdm(train_files):\n",
-    "    with open('train_db/{}'.format(txt), 'r') as f:\n",
+    "    with open('{}{}'.format(TRAIN_PATH, txt), 'r') as f:\n",
     "        content = f.read()\n",
     "        parsed = parse_vector(content)\n",
     "        person_id = txt[:4]\n",
     "    vecs.append(parsed)\n",
     "    person_ids.append(person_id)\n",
     "        \n",
-    "df = pd.DataFrame({'vec':vecs, 'person_id': person_ids})\n",
-    "df.to_pickle('raw_train.h5')"
+    "df = pd.DataFrame({'vec':vecs, 'person_id': person_ids})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.read_pickle('raw_train.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -108,42 +123,20 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 52284 entries, 0 to 52283\n",
-      "Data columns (total 2 columns):\n",
-      "person_id    52284 non-null object\n",
-      "vec          52284 non-null object\n",
-      "dtypes: object(2)\n",
-      "memory usage: 817.0+ KB\n"
+      "Data columns (total 3 columns):\n",
+      "is_duplicate    52284 non-null int64\n",
+      "vec1            52284 non-null object\n",
+      "vec2            52284 non-null object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 1.2+ MB\n",
+      "None\n",
+      "shuffled: len - 52284, 0 - 52027, 1 - 257\n"
      ]
     }
    ],
    "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "full = pd.DataFrame({'vec1': [], 'vec2': [], 'is_duplicate': [], 'person_id1': [], 'person_id2': []})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "# random shuffle\n",
+    "# random shuffle two parts of raw_train.h5 in a loop and compare each with each\n",
+    "\n",
     "full_vec1 = []\n",
     "full_vec2 = []\n",
     "is_duplicate = []\n",
@@ -167,12 +160,15 @@
     "    full_vec2 += list(vec2)\n",
     "\n",
     "shuffled = pd.DataFrame({'vec1': full_vec1, 'vec2': full_vec2, \n",
-    "                         'is_duplicate': is_duplicate})    "
+    "                         'is_duplicate': is_duplicate})\n",
+    "print shuffled.info()\n",
+    "print 'shuffled: len - {}, 0 - {}, 1 - {}'.format(len(shuffled), len(shuffled[shuffled.is_duplicate == 0]), \n",
+    "                                                  len(shuffled[shuffled.is_duplicate == 1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -184,98 +180,46 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 52284 entries, 0 to 52283\n",
+      "RangeIndex: 517020 entries, 0 to 517019\n",
       "Data columns (total 3 columns):\n",
-      "is_duplicate    52284 non-null int64\n",
-      "vec1            52284 non-null object\n",
-      "vec2            52284 non-null object\n",
+      "is_duplicate    517020 non-null int64\n",
+      "vec1            517020 non-null object\n",
+      "vec2            517020 non-null object\n",
       "dtypes: int64(1), object(2)\n",
-      "memory usage: 1.2+ MB\n",
+      "memory usage: 11.8+ MB\n",
       "None\n",
-      "len - 52284, 0 - 52013, 1 - 271\n"
+      "duplicates: len - 517020, 0 - 0, 1 - 517020\n"
      ]
     }
    ],
    "source": [
-    "print shuffled.info()\n",
-    "print 'len - {}, 0 - {}, 1 - {}'.format(len(shuffled), len(shuffled[shuffled.is_duplicate == 0]), \n",
-    "                                        len(shuffled[shuffled.is_duplicate == 1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "shuffled.to_pickle('train_shuffled.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
+    "# create pairs of duplicates\n",
+    "\n",
     "full_vec1 = []\n",
     "full_vec2 = []\n",
-    "for i in df.person_id.unique():\n",
-    "    one_person = df[df.person_id == i]\n",
-    "    left = one_person.sample(frac=0.9, replace=True)\n",
-    "    right = one_person.sample(frac=0.9, replace=True)\n",
-    "    \n",
-    "    vec1 = left['vec'].values\n",
-    "    vec2 = right['vec'].values\n",
-    "    \n",
-    "    full_vec1 += list(vec1)\n",
-    "    full_vec2 += list(vec2)\n",
+    "for i in range(10):\n",
+    "    for i in df.person_id.unique():\n",
+    "        one_person = df[df.person_id == i]\n",
+    "        left = one_person.sample(frac=0.99, replace=True)\n",
+    "        right = one_person.sample(frac=0.99, replace=True)\n",
     "\n",
-    "is_duplicate = [1 for i in range(len(full_vec1))]\n",
+    "        vec1 = left['vec'].values\n",
+    "        vec2 = right['vec'].values\n",
+    "\n",
+    "        full_vec1 += list(vec1)\n",
+    "        full_vec2 += list(vec2)\n",
+    "\n",
+    "is_duplicate = [1 for i in xrange(len(full_vec1))]\n",
     "duplicates = pd.DataFrame({'vec1': full_vec1, 'vec2': full_vec2, \n",
-    "                           'is_duplicate': is_duplicate})  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 47047 entries, 0 to 47046\n",
-      "Data columns (total 3 columns):\n",
-      "is_duplicate    47047 non-null int64\n",
-      "vec1            47047 non-null object\n",
-      "vec2            47047 non-null object\n",
-      "dtypes: int64(1), object(2)\n",
-      "memory usage: 1.1+ MB\n",
-      "None\n",
-      "len - 47047, 0 - 0, 1 - 47047\n"
-     ]
-    }
-   ],
-   "source": [
+    "                           'is_duplicate': is_duplicate})  \n",
     "print duplicates.info()\n",
-    "print 'len - {}, 0 - {}, 1 - {}'.format(len(duplicates), len(duplicates[duplicates.is_duplicate == 0]), \n",
+    "print 'duplicates: len - {}, 0 - {}, 1 - {}'.format(len(duplicates), len(duplicates[duplicates.is_duplicate == 0]), \n",
     "                                        len(duplicates[duplicates.is_duplicate == 1]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -287,19 +231,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 99331 entries, 0 to 99330\n",
+      "RangeIndex: 569304 entries, 0 to 569303\n",
       "Data columns (total 3 columns):\n",
-      "is_duplicate    99331 non-null int64\n",
-      "vec1            99331 non-null object\n",
-      "vec2            99331 non-null object\n",
+      "is_duplicate    569304 non-null int64\n",
+      "vec1            569304 non-null object\n",
+      "vec2            569304 non-null object\n",
       "dtypes: int64(1), object(2)\n",
-      "memory usage: 2.3+ MB\n",
+      "memory usage: 13.0+ MB\n",
       "None\n",
-      "len - 99331, 0 - 52013, 1 - 47318\n"
+      "len - 569304, 0 - 52027, 1 - 517277\n"
      ]
     }
    ],
    "source": [
+    "# create dataset where target distribution is equal\n",
+    "\n",
     "full = pd.concat([shuffled, duplicates], ignore_index=True)\n",
     "\n",
     "print full.info()\n",
@@ -309,13 +255,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file saved - dataset/train/raw_train.h5\n",
+      "file saved - dataset/train/shuffled+duplicates.h5\n",
+      "file saved - dataset/train/shuffled_min.h5\n"
+     ]
+    }
+   ],
    "source": [
-    "full.to_pickle('train_shuffled+duplicates.h5')"
+    "save_dataframe('dataset/train/raw_train.h5', df)\n",
+    "save_dataframe('dataset/train/shuffled+duplicates.h5', full)\n",
+    "save_dataframe('dataset/train/shuffled_min.h5', shuffled)"
    ]
   },
   {
@@ -330,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -341,40 +301,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "  0%|          | 0/953 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
-      "\n",
-      "100%|██████████| 953/953 [00:00<00:00, 11893.34it/s]\u001b[A\u001b[A"
+      "100%|██████████| 953/953 [00:00<00:00, 12107.87it/s]"
      ]
-    }
-   ],
-   "source": [
-    "test_files = sorted(listdir('test_db/'))\n",
-    "\n",
-    "vecs = []\n",
-    "person_ids = []\n",
-    "\n",
-    "for txt in tqdm(test_files):\n",
-    "    with open('test_db/{}'.format(txt), 'r') as f:\n",
-    "        content = f.read()\n",
-    "        parsed = parse_vector(content)\n",
-    "        person_id = txt[:4]\n",
-    "    vecs.append(parsed)\n",
-    "    person_ids.append(person_id)\n",
-    "        \n",
-    "df = pd.DataFrame({'vec':vecs, 'person_id': person_ids})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -385,18 +314,39 @@
       "person_id    953 non-null object\n",
       "vec          953 non-null object\n",
       "dtypes: object(2)\n",
-      "memory usage: 15.0+ KB\n"
+      "memory usage: 15.0+ KB\n",
+      "None\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "df.to_pickle('raw_test.h5')\n",
-    "df.info()"
+    "test_files = sorted(listdir(TEST_PATH))\n",
+    "\n",
+    "vecs = []\n",
+    "person_ids = []\n",
+    "\n",
+    "for txt in tqdm(test_files):\n",
+    "    with open('{}{}'.format(TEST_PATH, txt), 'r') as f:\n",
+    "        content = f.read()\n",
+    "        parsed = parse_vector(content)\n",
+    "        person_id = txt[:4]\n",
+    "    vecs.append(parsed)\n",
+    "    person_ids.append(person_id)\n",
+    "        \n",
+    "raw_test = pd.DataFrame({'vec':vecs, 'person_id': person_ids})\n",
+    "print raw_test.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -407,63 +357,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "  0%|          | 0/953 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
-      "\n",
-      " 14%|█▎        | 131/953 [00:00<00:00, 1304.40it/s]\u001b[A\u001b[A\n",
-      "\n",
-      " 27%|██▋       | 258/953 [00:00<00:00, 1289.43it/s]\u001b[A\u001b[A\n",
-      "\n",
-      " 41%|████      | 392/953 [00:00<00:00, 1301.69it/s]\u001b[A\u001b[A\n",
-      "\n",
-      " 55%|█████▌    | 528/953 [00:00<00:00, 1314.15it/s]\u001b[A\u001b[A\n",
-      "\n",
-      " 69%|██████▉   | 659/953 [00:00<00:00, 1309.71it/s]\u001b[A\u001b[A\n",
-      "\n",
-      " 83%|████████▎ | 791/953 [00:00<00:00, 1312.00it/s]\u001b[A\u001b[A\n",
-      "\n",
-      " 97%|█████████▋| 920/953 [00:00<00:00, 1301.52it/s]\u001b[A\u001b[A\n",
-      "\n",
-      "100%|██████████| 953/953 [00:00<00:00, 1297.11it/s]\u001b[A\u001b[A"
+      "100%|██████████| 953/953 [00:00<00:00, 1125.12it/s]\n"
      ]
-    }
-   ],
-   "source": [
-    "vec1 = []\n",
-    "vec2 = []\n",
-    "is_duplicate = []\n",
-    "\n",
-    "for i in tqdm(range(len(df))):\n",
-    "    current_vec = df.vec[i]\n",
-    "    current_person = df.person_id[i]\n",
-    "    \n",
-    "    exception = df.index.isin([i])\n",
-    "    sample = df[~exception]\n",
-    "    vecs = sample['vec'].values\n",
-    "    persons = sample['person_id'].values\n",
-    "    \n",
-    "    for person in zip(persons, vecs):\n",
-    "        vec1.append(current_vec)\n",
-    "        vec2.append(person[1])\n",
-    "        if person[0] == current_person:\n",
-    "            is_duplicate.append(1)\n",
-    "        else:\n",
-    "            is_duplicate.append(0)\n",
-    "            \n",
-    "\n",
-    "test_df = pd.DataFrame({'vec1':vec1, 'vec2': vec2, 'is_duplicate': is_duplicate})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -482,19 +378,62 @@
     }
    ],
    "source": [
+    "vec1 = []\n",
+    "vec2 = []\n",
+    "is_duplicate = []\n",
+    "\n",
+    "for i in tqdm(range(len(raw_test))):\n",
+    "    current_vec = raw_test.vec[i]\n",
+    "    current_person = raw_test.person_id[i]\n",
+    "    \n",
+    "    exception = raw_test.index.isin([i])\n",
+    "    sample = raw_test[~exception]\n",
+    "    vecs = sample['vec'].values\n",
+    "    persons = sample['person_id'].values\n",
+    "    \n",
+    "    for person in zip(persons, vecs):\n",
+    "        vec1.append(current_vec)\n",
+    "        vec2.append(person[1])\n",
+    "        if person[0] == current_person:\n",
+    "            is_duplicate.append(1)\n",
+    "        else:\n",
+    "            is_duplicate.append(0)\n",
+    "            \n",
+    "\n",
+    "test_df = pd.DataFrame({'vec1':vec1, 'vec2': vec2, 'is_duplicate': is_duplicate})\n",
     "print test_df.info()\n",
     "print 'len - {}, 0 - {}, 1 - {}'.format(len(test_df), len(test_df[test_df.is_duplicate == 0]), \n",
-    "                                        len(test_df[test_df.is_duplicate == 1]))\n",
-    "test_df.to_pickle('test.h5')"
+    "                                        len(test_df[test_df.is_duplicate == 1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file saved - dataset/test/raw_test.h5\n",
+      "file saved - dataset/test/test.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_dataframe('dataset/test/raw_test.h5', raw_test)\n",
+    "save_dataframe('dataset/test/test.h5', test_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
