--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -167,7 +167,7 @@
    "outputs": [],
    "source": [
     "history = pd.read_pickle('history/mlp1_b100_bn_euc_dist.h5')\n",
-    "model = load_model('models/best_model.h5')"
+    "model = load_model('models/best_model.h5', custom_objects={'f1':f1, 'recall': recall, 'precision':precision})"
    ]
   },
   {
